# portfolio-nextjs-vite-weather-app

./: .gitconfig  .gitignore  COMMIT.md  Makefile  README.md  a.out  docker-compose.yml  main.cpp  package-lock.json  package.json
.github/workflows/: backend.yml  weather-axum-backend-ci.yml  weather-fastapi-backend.yml  weather-frontend-ci.yml
src/: App.tsx  api.ts
weather-axum-backend/: .dockerignore  Cargo.toml  Dockerfile.dev
weather-backend/src/: main.rs
weather-fastapi-backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
weather-fastapi-backend/tests/: test_ping.py
weather-frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
weather-frontend/src/: App.tsx  api.ts  index.css
weather-frontend/src/components/: WeatherIcon.tsx
weather-frontend/src/components/cards/: Card.tsx  CurrentWeather.tsx  DailyForecast.tsx  HourlyForecast.tsx
weather-frontend/src/schemas/: weatherSchema.ts
