[package]
name = "weather-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
http-body-util = "0.1.3"
hyper = "1.8.0"
once_cell = "1.21.3"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
surrealdb = { version = "2.3.10", features = ["kv-mem"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"




